--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body class="h-full">
 
+    <!-- Login Container -->
     <div id="login-container" class="flex h-screen w-full items-center justify-center bg-gray-100 p-4">
         <div class="bg-white p-8 rounded-lg shadow-md text-center w-full max-w-sm">
             <h1 class="text-2xl font-bold mb-2">Newsletter HQ</h1>
@@ -29,6 +30,7 @@
         </div>
     </div>
 
+    <!-- App Container -->
     <div id="app-container" class="relative min-h-screen md:flex" style="display: none;">
         <div id="sidebar-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-20 md:hidden" style="display: none;"></div>
         <div id="sidebar" class="bg-gray-800 text-white w-64 space-y-6 py-7 px-2 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 z-30">
@@ -449,4 +451,3 @@
     </script>
 </body>
 </html>
-also add download subscribers list as CSV f
